--- a/GUI/SearchTaskWindow.xaml
+++ b/GUI/SearchTaskWindow.xaml
@@ -64,20 +64,36 @@
                                     </StackPanel>-->
                                 </StackPanel>
                             </GroupBox>
-                            <!--<GroupBox Header="Peak Trimming">
+                            <GroupBox Header="Peak Trimming">
                                 <StackPanel>
-                                    <CheckBox x:Name="trimMs1" Content="Trim MS1 Peaks" IsChecked="True" />
-                                    <CheckBox x:Name="trimMsMs" Content="Trim MS/MS Peaks" IsChecked="True" />
+                                    <CheckBox x:Name="trimMs1" Content="Trim MS1 Peaks" IsChecked="True">
+                                        <ToolTipService.ToolTip>
+                                            <ToolTip Content="Remove low-intensity MS1 peaks using the below settings" />
+                                        </ToolTipService.ToolTip>
+                                    </CheckBox>
+                                    <CheckBox x:Name="trimMsMs" Content="Trim MS2 Peaks" IsChecked="True">
+                                        <ToolTipService.ToolTip>
+                                            <ToolTip Content="Remove low-intensity MS2 peaks using the below settings" />
+                                        </ToolTipService.ToolTip>
+                                    </CheckBox>
                                     <StackPanel Orientation="Horizontal" Margin="5">
                                         <Label Content="Top N peaks" />
-                                        <TextBox x:Name="TopNPeaksCheckBox" Width="45" />
+                                        <TextBox x:Name="TopNPeaksTextBox" PreviewTextInput="PreviewIfInt" Width="45">
+                                            <ToolTipService.ToolTip>
+                                                <ToolTip Content="Use the N most intense peaks from the spectrum and remove all other peaks" />
+                                            </ToolTipService.ToolTip>
+                                        </TextBox>
                                     </StackPanel>
                                     <StackPanel Orientation="Horizontal" Margin="5">
-                                        <Label Content="Minimum ratio" />
-                                        <TextBox x:Name="MinRatioCheckBox" Width="45" />
+                                        <Label Content="Minimum intensity ratio" />
+                                        <TextBox x:Name="MinRatioTextBox" Width="45">
+                                            <ToolTipService.ToolTip>
+                                                <ToolTip Content="Peaks must be this intense compared to the base peak" />
+                                            </ToolTipService.ToolTip>
+                                        </TextBox>
                                     </StackPanel>
                                 </StackPanel>
-                            </GroupBox>-->
+                            </GroupBox>
                             <!--<CheckBox x:Name="disposeOfFilesWhenDone" Content="Dispose of files when done" IsChecked="True" />-->
                         </StackPanel>
                     </Expander>
@@ -125,7 +141,7 @@
                                     <StackPanel Grid.Column="1">
                                         <RadioButton x:Name="modernSearchRadioButton" Content="Modern Search" GroupName="SearchType" />
                                         <StackPanel Orientation="Horizontal" Margin="1">
-                                            <Label x:Name="label2" Content="Number of Database Partitions" />
+                                            <Label x:Name="numerOfDatabaseSearchesLabel" Content="Number of Database Partitions" />
                                             <TextBox x:Name="numberOfDatabaseSearchesTextBox" PreviewTextInput="PreviewIfInt" Width="45" />
                                         </StackPanel>
                                     </StackPanel>
@@ -146,21 +162,21 @@
                                         <RadioButton x:Name="radioButtonReverseDecoy" Content="Generate reversed decoys" GroupName="DecoyType" Margin="1" DockPanel.Dock="Top" IsEnabled="{Binding IsChecked, ElementName=checkBoxDecoy}" />
                                         <RadioButton x:Name="radioButtonSlideDecoy" Content="Generate slided decoys" GroupName="DecoyType" Margin="1" DockPanel.Dock="Top" IsEnabled="{Binding IsChecked, ElementName=checkBoxDecoy}" />
                                         <StackPanel Orientation="Horizontal" Margin="5">
-                                            <Label x:Name="label1" Content="Max Missed Cleavages" />
+                                            <Label x:Name="maxMissedCleavagesLabel" Content="Max Missed Cleavages" />
                                             <TextBox x:Name="missedCleavagesTextBox" PreviewTextInput="PreviewIfInt" Width="45" />
                                         </StackPanel>
                                         <StackPanel Orientation="Horizontal" Margin="5">
-                                            <Label x:Name="label_Copy" Content="Protease" />
+                                            <Label x:Name="proteaseLabel" Content="Protease" />
                                             <ComboBox x:Name="proteaseComboBox" />
                                         </StackPanel>
                                     </StackPanel>
                                     <StackPanel Grid.Column="1">
                                         <StackPanel Orientation="Horizontal" Margin="5">
-                                            <Label x:Name="label1_Copy" Content="Initiator Methionine" />
+                                            <Label x:Name="initiatorMethionineLabel" Content="Initiator Methionine" />
                                             <ComboBox x:Name="initiatorMethionineBehaviorComboBox" />
                                         </StackPanel>
                                         <StackPanel Orientation="Horizontal" Margin="5">
-                                            <Label x:Name="label55_Copy" Content="Max Modification Isoforms" />
+                                            <Label x:Name="maxModificationIsoformsLabel" Content="Max Modification Isoforms" />
                                             <TextBox x:Name="maxModificationIsoformsTextBox" PreviewTextInput="PreviewIfInt" Width="45" />
                                         </StackPanel>
                                         <StackPanel Orientation="Horizontal" Margin="5">
@@ -193,7 +209,7 @@
                                     </StackPanel>
                                     <StackPanel Grid.Column="1">
                                         <StackPanel Orientation="Horizontal" Margin="5">
-                                            <Label x:Name="label4" Content="Ions to search" />
+                                            <Label x:Name="ionsToSearchLabel" Content="Ions to search" />
                                             <CheckBox x:Name="bCheckBox" Content="b ions" />
                                             <CheckBox x:Name="yCheckBox" Content="y ions" />
                                         </StackPanel>
@@ -206,13 +222,13 @@
                             </GroupBox>
                             <GroupBox Header="Mass Difference Acceptor Criterion">
                                 <StackPanel>
-                                    <RadioButton x:Name="mdacExact" Content="Exact" />
-                                    <RadioButton x:Name="mdac1mm" Content="1 Missed Monoisotopic Peak" />
-                                    <RadioButton x:Name="mdac2mm" Content="1 or 2 Missed Monoisotopic Peaks" />
-                                    <RadioButton x:Name="mdac3mm" Content="1, 2, or 3 Missed Monoisotopic Peaks" />
-                                    <RadioButton x:Name="mdac187" Content="-187 and Up" />
-                                    <RadioButton x:Name="mdacOpen" Content="Accept all" />
-                                    <RadioButton x:Name="mdacCustom" Content="Custom:" />
+                                    <RadioButton x:Name="massDiffAcceptExact" Content="Exact" />
+                                    <RadioButton x:Name="massDiffAccept1mm" Content="1 Missed Monoisotopic Peak" />
+                                    <RadioButton x:Name="massDiffAccept2mm" Content="1 or 2 Missed Monoisotopic Peaks" />
+                                    <RadioButton x:Name="massDiffAccept3mm" Content="1, 2, or 3 Missed Monoisotopic Peaks" />
+                                    <RadioButton x:Name="massDiffAccept187" Content="-187 and Up" />
+                                    <RadioButton x:Name="massDiffAcceptOpen" Content="Accept all" />
+                                    <RadioButton x:Name="massDiffAcceptCustom" Content="Custom:" />
                                     <TextBox x:Name="customkMdacTextBox" ToolTipService.ShowDuration="999999" ToolTip="A custom mass difference acceptor may be specified in multiple ways:&#x0a;* To accept a custom (other than the interval corresponding to the precursor tolerance) interval around zero daltons, specify a custom name, followed by &quot;ppmAroundZero&quot; or &quot;daltonsAroundZero&quot;, followed by the numeric value corresponding to the interval width. Examples:&#x0a;  * CustomPpmInterval ppmAroundZero 5&#x0a;  * CustomDaltonInterval daltonsAroundZero 2.1 &#x0a;&#x0a;* To accept a variety of pre-specified mass differences, use a custom name, followed by &quot;dot&quot;, followed by a custom bin width, followed by comma separated acceptable mass differences. Examples:&#x0a;  * CustomMissedIsotopePeaks dot 5 ppm 0,1.0029,2.0052&#x0a;  * CustomOxidationAllowed dot 0.1 da 0,16&#x0a;&#x0a;* To accept mass differences in pre-specified dalton intervals, use a custom name, followed by &quot;interval&quot;, followed by comma separated mass intervals in brackets. Example:&#x0a;  * CustomPositiveIntervalAcceptror interval [0,200]" />
                                 </StackPanel>
                             </GroupBox>
@@ -234,10 +250,21 @@
                                 <TextBox x:Name="maxDegreesOfParallelism" PreviewTextInput="PreviewIfInt" Width="45" />
                             </StackPanel>-->
                             <StackPanel Orientation="Horizontal" Margin="5">
-                                <Label x:Name="ffdf" Content="Minimum score allowed:" />
+                                <Label x:Name="minScoreAllowedLabel" Content="Minimum score allowed:" />
                                 <TextBox x:Name="minScoreAllowed" Width="45" />
                             </StackPanel>
                             <StackPanel Orientation="Horizontal" Margin="5">
+                                <CheckBox x:Name="deltaScoreCheckBox" Content="Use Delta Scores For FDR" ToolTipService.ShowDuration="20000">
+                                    <CheckBox.ToolTip>
+                                        <TextBlock>
+                                            This allows delta scores (the difference between the top two highest scoring candidates) to be considered in q-value calculations.
+                                            <LineBreak/>
+                                            MetaMorpheus automatically checks that delta scores improve the number of PSMs at a 1% FDR. 
+                                            <LineBreak/>
+                                            If there is no improvement, then the standard score is used.
+                                        </TextBlock>
+                                    </CheckBox.ToolTip>
+                                </CheckBox>
                                 <CheckBox x:Name="eValueCheckBox" Content="Calculate eValues" />
                             </StackPanel>
                         </StackPanel>
@@ -361,37 +388,34 @@
                                 </StackPanel>
                             </GroupBox>
                             <GroupBox Header="Quantification">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="2*" />
-                                        <ColumnDefinition Width="5*" />
-                                    </Grid.ColumnDefinitions>
-                                    <StackPanel Margin="5" VerticalAlignment="Top"  Grid.Column="0">
-                                        <CheckBox x:Name="checkBoxQuantification" Content="Quantify peptides/proteins">
+                                <StackPanel>
+                                    <CheckBox x:Name="checkBoxQuantification" Content="Quantify peptides/proteins with FlashLFQ">
+                                        <ToolTipService.ToolTip>
+                                            <ToolTip Content="Label-free quantification is performed with FlashLFQ" />
+                                        </ToolTipService.ToolTip>
+                                    </CheckBox>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBox x:Name="quantPpmTolerance" Width="30" Height="20" IsEnabled="{Binding IsChecked, ElementName=checkBoxQuantification}">
                                             <ToolTipService.ToolTip>
-                                                <ToolTip Content="Label-free quantification is performed unless the TMT modification is detected" />
-                                            </ToolTipService.ToolTip>
-                                        </CheckBox>
-                                    </StackPanel>
-                                    <StackPanel Margin="0" VerticalAlignment="Top"  Grid.Column="1">
-                                        <Label x:Name="quantPpmLabel" Content="Tolerance (ppm)" IsEnabled="{Binding IsChecked, ElementName=checkBoxQuantification}" />
-                                        <TextBox x:Name="quantPpmTolerance" Width="30" IsEnabled="{Binding IsChecked, ElementName=checkBoxQuantification}">
-                                            <ToolTipService.ToolTip>
-                                                <ToolTip Content="PPM tolerance for MS1 (LFQ) or diagnostic ions (TMT)" />
+                                                <ToolTip Content="PPM tolerance for MS1 (LFQ) peakfinding" />
                                             </ToolTipService.ToolTip>
                                         </TextBox>
-                                        <CheckBox x:Name="checkBoxMatchBetweenRuns" Content="Match between runs" IsEnabled="{Binding IsChecked, ElementName=checkBoxQuantification}" />
+                                        <Label x:Name="quantPpmLabel" Content=" ppm peakfinding tolerance" IsEnabled="{Binding IsChecked, ElementName=checkBoxQuantification}" />
+                                    </StackPanel>
+                                    <CheckBox x:Name="checkBoxMatchBetweenRuns" Content="Match between runs" IsEnabled="{Binding IsChecked, ElementName=checkBoxQuantification}">
                                         <ToolTipService.ToolTip>
                                             <ToolTip Content="(LFQ) Use MS2 identifications from one run to quantify those same peptides in other runs where they were not identified" />
                                         </ToolTipService.ToolTip>
-                                    </StackPanel>
-                                </Grid>
+                                    </CheckBox>
+                                </StackPanel>
                             </GroupBox>
-                            <GroupBox Header="Mass Shift Histogram Analysis">
-                                <StackPanel Orientation="Horizontal">
-                                    <CheckBox x:Name="checkBoxHistogramAnalysis" Content="Do Histogram Analysis" />
-                                    <Label Content="Histogram bin width (Da):" />
-                                    <TextBox x:Name="histogramBinWidthTextBox" Width="45" IsEnabled="{Binding IsChecked, ElementName=checkBoxHistogramAnalysis}" />
+                            <GroupBox Header="Mass Difference Histogram Analysis">
+                                <StackPanel>
+                                    <CheckBox x:Name="checkBoxHistogramAnalysis" Content="Construct mass-difference histogram" />
+                                    <StackPanel Orientation="Horizontal">
+                                        <Label Content="Histogram bin width (Da):" IsEnabled="{Binding IsChecked, ElementName=checkBoxHistogramAnalysis}" />
+                                        <TextBox x:Name="histogramBinWidthTextBox" Width="45" Height="20" IsEnabled="{Binding IsChecked, ElementName=checkBoxHistogramAnalysis}" />
+                                    </StackPanel>
                                 </StackPanel>
                             </GroupBox>
                             <GroupBox Header="Pruned Database Writing">
