--- a/GUI/SearchTaskWindow.xaml
+++ b/GUI/SearchTaskWindow.xaml
@@ -406,7 +406,7 @@
                                     <RadioButton x:Name="massDiffAccept1mm" Content="1 Missed Monoisotopic Peak" ToolTipService.ShowDuration="999999" ToolTipService.InitialShowDelay="1000">
                                         <RadioButton.ToolTip>
                                             <TextBlock>
-                                                Basic search where the observed and theoretical precursor masses are allowed to disagree by 1 Da to allow for a 1 Da monisotopic mass error.
+                                                Basic search where the observed and theoretical precursor masses are allowed to disagree by 1 Da to allow for a 1 Da monoisotopic mass error.
                                                 <LineBreak/>
                                                 Example: A spectrum with a reported precursor mass of 1000 at 0.1 Da tolerance can match to theoreticals with masses of 998.9-999.1, 999.9-1000.1, and 1000.9-1001.1.
                                             </TextBlock>
@@ -415,23 +415,23 @@
                                     <RadioButton x:Name="massDiffAccept2mm" Content="1 or 2 Missed Monoisotopic Peaks" ToolTipService.ShowDuration="999999" ToolTipService.InitialShowDelay="1000">
                                         <RadioButton.ToolTip>
                                             <TextBlock>
-                                                Basic search where the observed and theoretical precursor masses are allowed to disagree by 1 or 2 Da to allow for a 1 or 2 Da monisotopic mass error.
+                                                Basic search where the observed and theoretical precursor masses are allowed to disagree by 1 or 2 Da to allow for a 1 or 2 Da monoisotopic mass error.
                                             </TextBlock>
                                         </RadioButton.ToolTip>
                                     </RadioButton>
                                     <RadioButton x:Name="massDiffAccept3mm" Content="1, 2, or 3 Missed Monoisotopic Peaks" ToolTipService.ShowDuration="999999" ToolTipService.InitialShowDelay="1000">
                                         <RadioButton.ToolTip>
                                             <TextBlock>
-                                                Basic search where the observed and theoretical precursor masses are allowed to disagree by 1, 2, or 3 Da to allow for a 1, 2, or 3 Da monisotopic mass error.
+                                                Basic search where the observed and theoretical precursor masses are allowed to disagree by 1, 2, or 3 Da to allow for a 1, 2, or 3 Da monoisotopic mass error.
                                             </TextBlock>
                                         </RadioButton.ToolTip>
                                     </RadioButton>
                                     <RadioButton x:Name="massDiffAccept187" Content="-187 and Up" ToolTipService.ShowDuration="999999" ToolTipService.InitialShowDelay="1000">
                                         <RadioButton.ToolTip>
                                             <TextBlock>
-                                                An "open-mass" search that allows mass-differences between observed and theoretical precursor masses of -187 to infinity (observed can be infinitely more massive than the theoretical).
+                                                An "open-mass" search that allows mass-differences between observed and theoretical precursor masses of -187 Da to infinity (observed can be infinitely more massive than the theoretical).
                                                 <LineBreak/>
-                                                The purpose of this search type is to detect mass-differences corresponding to PTMs, amino acid variants, sample handling artifiacts, etc.
+                                                The purpose of this search type is to detect mass-differences corresponding to PTMs, amino acid variants, sample handling artifacts, etc.
                                                 <LineBreak/>
                                                 Please use "Modern Search" mode when using this search type.
                                             </TextBlock>
@@ -442,7 +442,7 @@
                                             <TextBlock>
                                                 An "open-mass" search that allows mass-differences between observed and theoretical precursor masses of -infinity to infinity.
                                                 <LineBreak/>
-                                                The purpose of this search type is to detect mass-differences corresponding to PTMs, amino acid variants, sample handling artifiacts, etc.
+                                                The purpose of this search type is to detect mass-differences corresponding to PTMs, amino acid variants, sample handling artifacts, etc.
                                                 <LineBreak/>
                                                 Please use "Modern Search" mode when using this search type.
                                             </TextBlock>
@@ -465,7 +465,7 @@
                                                     <TextBlock>
                                                         Multiple sequences are reported when the identification is ambiguous.
                                                         <LineBreak/>
-                                                        Example: "PEPTIDE and PEPTLDE"
+                                                        Example: "PEPTIDE|PEPTLDE"
                                                         <LineBreak/>
                                                         If this is unchecked, a random coin flip is used to to break ties.
                                                     </TextBlock>
@@ -506,7 +506,7 @@
                                 <CheckBox x:Name="eValueCheckBox" Content="Calculate eValues"  Margin="5" ToolTipService.ShowDuration="999999" ToolTipService.InitialShowDelay="1000">
                                     <CheckBox.ToolTip>
                                         <TextBlock>
-                                            This calculates the expectation value (eValue) for each PSM, which is the probability of a PSM obtaining its given score by random chance.
+                                            This estimates the expectation value (eValue) for each PSM, which is the probability of a PSM obtaining its given score by random chance.
                                             <LineBreak/>
                                             There is a significant increase in search time.
                                             <LineBreak/>
@@ -562,7 +562,7 @@
                                             <TextBlock>
                                                 Only use this for highly prevelant modifications (>10% of peptides).
                                                 <LineBreak/>
-                                                All PTMs that are annotated in the database (e.g. with G-PTM-D) will be automatically searched.
+                                                All PTMs that are annotated in the database (e.g. with G-PTM-D) will be automatically searched even without these boxes checked.
                                                 <LineBreak/>
                                                 Do not check annotated PTMs here.
                                             </TextBlock>
